# lrncc

./: .gitignore  Cargo.toml  build.rs  clean.cmd  merge_to_public.cmd  runit.cmd  runtests.cmd
src/: main.rs  test.rs
testfiles/: empty_expression.c  empty_function_body.c  null_statement.c  null_then_return.c  unused_exp.c
testfiles/binary_op/: arithmetic_and_booleans.c
testfiles/compound_assignment/: add.c  bitwise_and.c  bitwise_chained.c  bitwise_lowest_precedence.c  bitwise_or.c  bitwise_sar.c  bitwise_shl.c  bitwise_xor.c  chained.c  divide.c  incr_expression_statement.c  incr_in_binary_expr.c  incr_parenthesized.c  lh_compound_assignment.c  lowest_precedence.c  minus.c  modulus.c  multiply.c  postfix_incr_and_decr.c  postfix_precedence.c  prefix_incr_and_decr.c  subtract_in_block.c  use_result.c
testfiles/fail/: extra_closing_brace.c  missing_closing_brace.c  missing_semicolon_in_block.c
testfiles/functions/: compound_assign_function_result.c  nested_block_variable_allocation.c  nested_function_arg_counts.c  preserve_ecx_bitwise_shift.c
testfiles/globals/: bitwise_ops_file_scope_vars.c  compound_assignment_static_var.c  distinct_local_and_extern.c  extern_block_scope_variable.c  goto_skip_static_initializer.c  increment_global_vars.c  label_file_scope_var_same_name.c  label_static_var_same_name.c  multiple_static_file_scope_vars.c  multiple_static_local.c  shadow_static_local_var.c  static_local_multiple_scopes.c  static_local_uninitialized.c  static_recursive_call.c  static_then_extern.c  static_variables_in_expressions.c  switch_on_extern.c  (+4 more)
(+448 files in other folders)
