[package]
name = "lrncc"
version = "0.1.0"
authors = ["knutaf <knutaf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
lazy_static = "*"
rand = "*"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version = "0.1", features = ["ansi", "smallvec", "env-filter"] }
parse_int = "0.9"
